--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,29 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: imblearn in c:\\users\\akashdudi\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (0.0)\n",
-      "Requirement already satisfied: imbalanced-learn in c:\\users\\akashdudi\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from imblearn) (0.3.3)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\akashdudi\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (0.19.1)\n",
-      "Requirement already satisfied: scipy in c:\\users\\akashdudi\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.0.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\akashdudi\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from imbalanced-learn->imblearn) (1.14.1)\n"
+      "Collecting pip\n",
+      "  Downloading https://files.pythonhosted.org/packages/5f/25/e52d3f31441505a5f3af41213346e5b6c221c9e086a166f3703d2ddaf940/pip-18.0-py2.py3-none-any.whl (1.3MB)\n",
+      "Installing collected packages: pip\n",
+      "  Found existing installation: pip 10.0.1\n",
+      "    Uninstalling pip-10.0.1:\n",
+      "      Successfully uninstalled pip-10.0.1\n",
+      "Successfully installed pip-18.0\n",
+      "Requirement already satisfied: imblearn in b:\\downloads\\anaconda\\lib\\site-packages (0.0)\n",
+      "Requirement already satisfied: imbalanced-learn in b:\\downloads\\anaconda\\lib\\site-packages (from imblearn) (0.3.3)\n",
+      "Requirement already satisfied: scikit-learn in b:\\downloads\\anaconda\\lib\\site-packages (from imbalanced-learn->imblearn) (0.19.1)\n",
+      "Requirement already satisfied: scipy in b:\\downloads\\anaconda\\lib\\site-packages (from imbalanced-learn->imblearn) (1.1.0)\n",
+      "Requirement already satisfied: numpy in b:\\downloads\\anaconda\\lib\\site-packages (from imbalanced-learn->imblearn) (1.14.3)\n"
      ]
     }
    ],
    "source": [
     "# To supress warnings\n",
+    "!python -m pip install --upgrade pip\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
-    "\n",
+    "#!pip install msgpack-python\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "#!pip install pickle  --upgrade pip\n",
+    "import pickle\n",
     "%matplotlib inline\n",
     "\n",
     "# For loading .arff files\n",
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +269,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -520,12 +537,13 @@
     "        print('-'*100)\n",
     "    return imputed_oversampled_dataframes_dictionary\n",
     "\n",
-    "imputed_oversampled_dataframes_dictionary = perform_oversampling_on_imputed_dataframes(imputed_dataframes_dictionary)"
+    "imputed_oversampled_dataframes_dictionary = perform_oversampling_on_imputed_dataframes(imputed_dataframes_dictionary)\n",
+    "#imputed_oversampled_dataframes_dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -681,25 +699,25 @@
       " Model: \u001b[1mBalanced Bagging\u001b[0m Classifier\n",
       "\tImputer Technique: \u001b[1mMean\u001b[0m\n",
       "\t\tDataset: \u001b[1m1year\u001b[0m\n",
-      "\t\t\tAccuracy: 0.9796491164654345\n",
-      "\t\t\tPrecision: [0.59717892 0.59675277]\n",
-      "\t\t\tRecall: [0.58482805 0.59178594]\n",
+      "\t\t\tAccuracy: 0.9817211897956953\n",
+      "\t\t\tPrecision: [0.59747024 0.59661267]\n",
+      "\t\t\tRecall: [0.58593776 0.59282199]\n",
       "\t\tDataset: \u001b[1m2year\u001b[0m\n",
-      "\t\t\tAccuracy: 0.9753407540733268\n",
-      "\t\t\tPrecision: [0.59532758 0.59680412]\n",
-      "\t\t\tRecall: [0.58291221 0.58848931]\n",
+      "\t\t\tAccuracy: 0.9771824349213141\n",
+      "\t\t\tPrecision: [0.5954245  0.59670443]\n",
+      "\t\t\tRecall: [0.58373059 0.58951256]\n",
       "\t\tDataset: \u001b[1m3year\u001b[0m\n",
-      "\t\t\tAccuracy: 0.9630300501397178\n",
-      "\t\t\tPrecision: [0.59359359 0.59331671]\n",
-      "\t\t\tRecall: [0.57167189 0.58481299]\n",
+      "\t\t\tAccuracy: 0.9655282389356833\n",
+      "\t\t\tPrecision: [0.59437469 0.59343936]\n",
+      "\t\t\tRecall: [0.57232149 0.58711107]\n",
       "\t\tDataset: \u001b[1m4year\u001b[0m\n",
-      "\t\t\tAccuracy: 0.9586621982726374\n",
-      "\t\t\tPrecision: [0.59443535 0.59222577]\n",
-      "\t\t\tRecall: [0.56523636 0.58674236]\n",
+      "\t\t\tAccuracy: 0.9589858517803485\n",
+      "\t\t\tPrecision: [0.59463014 0.59162248]\n",
+      "\t\t\tRecall: [0.56372716 0.58835941]\n",
       "\t\tDataset: \u001b[1m5year\u001b[0m\n",
-      "\t\t\tAccuracy: 0.9532727272727273\n",
-      "\t\t\tPrecision: [0.59329609 0.58898757]\n",
-      "\t\t\tRecall: [0.56336364 0.581     ]\n"
+      "\t\t\tAccuracy: 0.9543636363636363\n",
+      "\t\t\tPrecision: [0.59491525 0.58857645]\n",
+      "\t\t\tRecall: [0.56172727 0.58427273]\n"
      ]
     }
    ],
@@ -709,7 +727,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'finalized_model.sav'\n",
+    "pickle.dump(models_dictionarynarynarynarynarydictionarydictionarydictionary_dictionary, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,49 +819,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.982165469570368]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year1_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('Accuracy', 0.982165469570368),\n",
-       "             ('Precisions', array([0.59776119, 0.59632893])),\n",
-       "             ('Recalls', array([0.58519752, 0.59400608])),\n",
-       "             ('TN', 1316.2),\n",
-       "             ('FP', 35.0),\n",
-       "             ('FN', 13.2),\n",
-       "             ('TP', 1338.0)])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "year_1_result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
